Updated properties for integration tests